# axelar-lints

./: .gitignore  Cargo.toml  README.md
.github/workflows/: basic.yaml
amplifier-lints/: Cargo.toml  README.md
amplifier-lints/cosmwasm_addr_in_msg_struct/: Cargo.toml  README.md
amplifier-lints/cosmwasm_addr_in_msg_struct/src/: lib.rs
amplifier-lints/cosmwasm_addr_in_msg_struct/ui_enum_tests/: main.rs  main.stderr
amplifier-lints/cosmwasm_addr_in_msg_struct/ui_struct_tests/: main.rs  main.stderr
amplifier-lints/cosmwasm_addr_in_msg_struct/ui_tests/: main.rs  main.stderr
amplifier-lints/ensure_msg_has_permissions/: Cargo.toml  README.md
amplifier-lints/ensure_msg_has_permissions/src/: lib.rs
amplifier-lints/ensure_msg_has_permissions/ui/: main.rs  main.stderr
amplifier-lints/execute_without_explicit_permissions/: Cargo.toml  README.md
amplifier-lints/execute_without_explicit_permissions/src/: lib.rs
amplifier-lints/execute_without_explicit_permissions/succeed_test/: contract.rs
amplifier-lints/execute_without_explicit_permissions/ui_empty_test/: contract.rs
amplifier-lints/execute_without_explicit_permissions/ui_fail_test/: contract.rs  contract.stderr
amplifier-lints/execute_without_explicit_permissions/ui_let_test/: contract.rs
amplifier-lints/execute_without_explicit_permissions/ui_match_test/: contract.rs
amplifier-lints/execute_without_explicit_permissions/ui_non_binding_test/: contract.rs  contract.stderr
amplifier-lints/execute_without_explicit_permissions/ui_unchecked_test/: contract.rs  contract.stderr
amplifier-lints/get_fn/: Cargo.toml  README.md
amplifier-lints/get_fn/src/: lib.rs
amplifier-lints/get_fn/ui/: main.rs  main.stderr
amplifier-lints/get_fn/ui_tests/: main.rs  main.stderr
amplifier-lints/msg_without_explicit_permissions/: Cargo.toml  README.md
amplifier-lints/msg_without_explicit_permissions/src/: lib.rs
amplifier-lints/msg_without_explicit_permissions/tests/: main.rs  main.stderr
amplifier-lints/msg_without_explicit_permissions/ui_tests/: main.rs  main.stderr
amplifier-lints/ref_opt_type/: Cargo.toml  README.md
amplifier-lints/ref_opt_type/src/: lib.rs
amplifier-lints/ref_opt_type/ui/: main.stderr
amplifier-lints/ref_opt_type/ui_tests/: main.rs  main.stderr
amplifier-lints/restrict_cosmwasm_addr_in_msg_struct/: Cargo.toml  README.md
amplifier-lints/restrict_cosmwasm_addr_in_msg_struct/src/: lib.rs
amplifier-lints/restrict_cosmwasm_addr_in_msg_struct/ui/: main.stderr
amplifier-lints/src/: lib.rs
amplifier-lints/unwraps_outside_tests/: Cargo.toml
amplifier-lints/unwraps_outside_tests/src/: lib.rs
amplifier-lints/unwraps_outside_tests/ui_tests/: main.rs  main.stderr
amplifier-lints/warn_on_get_fn/: Cargo.toml  README.md
amplifier-lints/warn_on_get_fn/src/: lib.rs
amplifier-lints/warn_on_get_fn/ui/: main.stderr
amplifier-lints/warn_on_ref_opt_type/: Cargo.toml  README.md
amplifier-lints/warn_on_ref_opt_type/src/: lib.rs
amplifier-lints/warn_on_ref_opt_type/ui/: main.rs  main.stderr
amplifier-lints/warn_on_unwraps/: Cargo.toml  README.md
amplifier-lints/warn_on_unwraps/src/: lib.rs
amplifier-lints/warn_on_unwraps/ui/: main.stderr
amplifier-lints/warn_on_unwraps/ui_tests/: main.rs  main.stderr
