[workspace]
members = [
    "amplifier-lints",
]
resolver = "2"

[workspace.dependencies]
dylint_linting = "4.1.0"
dylint_testing = "4.1.0"

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.metadata.dylint]
libraries = [
    { path = "../axelar-lints/amplifier-lints" },
]
