[package]
name = "amplifier_lints"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2021"
publish = false

[package.metadata.rust-analyzer]
rustc_private = true

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm_addr_in_msg_struct = { path = "cosmwasm_addr_in_msg_struct", features = ["rlib"] }
dylint_linting = { workspace = true }
get_fn = { path = "get_fn", features = ["rlib"] }
msg_without_explicit_permissions = { path = "msg_without_explicit_permissions", features = ["rlib"] }
warn_on_unwraps = { path = "warn_on_unwraps", features = ["rlib"] }

[dev-dependencies]
dylint_testing = { workspace = true }
