[package]
name = "amplifier_lints"
version = "0.1.0"
edition = "2024"

[package.metadata.rust-analyzer]
rustc_private = true

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm_addr_in_msg_struct = { path = "cosmwasm_addr_in_msg_struct", features = ["rlib"] }
dylint_linting = { workspace = true }
execute_without_explicit_permissions = { path = "execute_without_explicit_permissions", features = ["rlib"] }
get_fn = { path = "get_fn", features = ["rlib"] }
msg_without_explicit_permissions = { path = "msg_without_explicit_permissions", features = ["rlib"] }
ref_opt_type = { path = "ref_opt_type", features = ["rlib"] }
unwraps_outside_tests = { path = "unwraps_outside_tests", features = ["rlib"] }

[dev-dependencies]
dylint_testing = { workspace = true }
