[package]
name = "msg_without_explicit_permissions"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dylint_linting = { workspace = true }

[dev-dependencies]
dylint_testing = { workspace = true }

[features]
rlib = ["dylint_linting/constituent"]

[package.metadata.rust-analyzer]
rustc_private = true
