[package]
name = "ref_opt_type"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dylint_linting = "4.1.0"

[dev-dependencies]
dylint_testing = "4.1.0"

[features]
rlib = ["dylint_linting/constituent"]

[package.metadata.rust-analyzer]
rustc_private = true
