[package]
name = "warn_on_unwraps"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dylint_linting = { workspace = true }

[dev-dependencies]
dylint_testing = { workspace = true }

[features]
rlib = ["dylint_linting/constituent"]

[package.metadata.rust-analyzer]
rustc_private = true
